finished issue-box #1 and issue-box #3

--- a/static/img/desktop.ini
+++ b/static/img/desktop.ini
@@ -11,3 +11,5 @@ mobile_arrow_left_black.png=@mobile_arrow_left_black.png,0
 mobile_arrow_right_yellow.png=@mobile_arrow_right_yellow.png,0
 mobile_arrow_right_black.png=@mobile_arrow_right_black.png,0
 mobile_arrow_left_yellow.png=@mobile_arrow_left_yellow.png,0
+mobile_workshop3.png=@mobile_workshop3.png,0
+workshop3.png=@workshop3.png,0
